--- a/lib/projects.json
+++ b/lib/projects.json
@@ -1,61 +1,73 @@
 [
     {
-        "title": "Lorem ipsum dolor sit.",
+        "title": "Blackjack Card Counting GUI Simulator",
+        "year": "2024",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum laborum, est aut consequatur itaque assumenda. Inventore earum beatae est labore sed, in optio nostrum corporis at dignissimos atque possimus rerum."
+        "description": "A GUI simulator that both visualizes and simulates a round of blackjack while also counting cards and uses Monte Carlo to assess the best card counting strategy for blackjack."
     },
     {
-        "title": "Et sit similique dicta.",
+        "title": "SDCTA Homelessness Dataset",
+        "year": "2023",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Molestias saepe praesentium provident! Quibusdam totam consectetur unde recusandae quam tempora, ea deleniti dolor, ab eum quos repellat iste neque. Pariatur amet ab, vel ratione necessitatibus tempora deleniti officiis. Tempora."
+        "description": "Working as a data science intern at San Diego County Taxpayers' Association, I spearheaded a the homelessness dataset project where we we finetuned a token reader to read documents for philanthropies that taxpayers' dollars go to. Also co-created an XML parser."
     },
     {
-        "title": "Necessitatibus deserunt harum velit!",
+        "title": "Power Outage Analysis",
+        "year": "2024",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Dolorum quam, impedit maiores aut voluptas dolore repellat recusandae aspernatur et minima in ad numquam unde doloribus nobis asperiores velit consequatur quos quae magni reiciendis deleniti quis ea esse. Perspiciatis?"
+        "description": "An analysis using power outage data to assess different potential causes and trends in power outage data."
     },
     {
-        "title": "Distinctio iure eveniet laudantium!",
+        "title": "Dietary Explorations",
+        "year": "2022",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Qui quas recusandae autem, delectus, porro explicabo expedita modi quam doloremque libero est quis adipisci iste iure numquam. Facilis provident sapiente excepturi ipsum nesciunt aut expedita tempore eligendi similique voluptates?"
     },
     {
         "title": "Quidem quisquam vel autem!",
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Fuga doloribus deserunt modi quia repellendus adipisci quas at reprehenderit atque quis voluptatem inventore, nobis temporibus nostrum aliquid omnis cupiditate error ullam illum porro sit est maxime! Sapiente, debitis tempora?"
     },
     {
         "title": "Necessitatibus aspernatur aliquam modi?",
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Dolorum nisi maiores animi qui quia, illum consequatur, eius ullam odit laudantium dicta, ab quas quo? Voluptatem excepturi, unde fugiat magni libero tenetur voluptas veniam nisi nam vel qui perferendis?"
     },
     {
         "title": "Dicta impedit laudantium blanditiis?",
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Magnam adipisci aliquam praesentium deleniti, minus quas. Distinctio voluptatibus fuga, rem porro minima aliquam eum eos, eius quasi veritatis veniam voluptate qui suscipit perferendis culpa labore, dolores dolor iure deleniti."
     },
     {
         "title": "Nesciunt nemo voluptatum provident!",
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Corporis similique quidem incidunt quam. Ad sit delectus, expedita veniam laborum cupiditate quis dolore maxime in doloribus! Excepturi nisi ea animi qui, libero architecto molestiae voluptates illum quam soluta possimus!"
     },
     {
         "title": "Eveniet rerum eius facere.",
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Cum quis recusandae maiores dolores veniam corrupti non rerum incidunt totam! Neque dolore placeat culpa omnis amet, enim numquam possimus qui atque excepturi reprehenderit labore voluptatibus quasi impedit aliquid nostrum?"
     },
     {
         "title": "Ipsam optio cum eius?",
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Nulla architecto blanditiis quis asperiores eveniet harum sint nobis accusamus ut officiis praesentium voluptatem, neque reiciendis omnis veritatis consequuntur dolores iure corporis possimus debitis soluta voluptatibus! Quos excepturi illo dicta!"
     },
     {
         "title": "Adipisci quae aliquam deserunt.",
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Nihil repudiandae reprehenderit quibusdam excepturi eum voluptatem saepe consequuntur nulla minima laudantium, laborum, nesciunt, officiis soluta. Deleniti itaque sit nihil ex maxime nostrum impedit, voluptatum corporis temporibus maiores voluptas et."
     },
     {
         "title": "Alias vitae modi doloremque?",
+        "year": "2025",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Rerum quaerat sapiente voluptatem earum expedita sed quod officiis, nisi magnam, repellat ducimus laboriosam minima accusantium animi consequuntur modi alias excepturi quae, natus ipsa magni delectus! Sunt eligendi assumenda temporibus."
     }
