--- a/lib/projects.json
+++ b/lib/projects.json
@@ -2,7 +2,7 @@
     {
         "title": "Blackjack Card Counting GUI Simulator",
         "year": "2024",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "image": "https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/images/blackjack_gui.jpg",
         "description": "A GUI simulator that both visualizes and simulates a round of blackjack while also counting cards and uses Monte Carlo to assess the best card counting strategy for blackjack."
     },
     {
@@ -14,7 +14,7 @@
     {
         "title": "Power Outage Analysis",
         "year": "2024",
-        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "image": "https://nadinemarcus.github.io/dsc_209r_lab1_portfolio/images/power_outage.jpg",
         "description": "An analysis using power outage data to assess different potential causes and trends in power outage data."
     },
     {
